<?xml version="1.0"?>

<package format="2">

  <name>any_node_example</name>
  <version>0.5.2</version>
  <description>any_node example</description>

  <license>BSD</license>

  <author email="pleemann@anybotics.com">Philipp Leemann</author>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <maintainer email="msuetterlin@anybotics.com">Marco Sütterlin</maintainer>
  <url>https://github.com/anybotics/any_node</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>any_node</depend>
  <depend>std_msgs</depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->

</package>
