<?xml version="1.0"?>

<package format="2">

  <name>any_worker</name>
  <version>0.1.2</version>
  <description>High resolution version of the ROS worker.</description>
  
  <license>BSD</license>
  
  <author email="pleemann@ethz.ch">Philipp Leemann</author>
  <maintainer email="pleemann@ethz.ch">Philipp Leemann</maintainer>
  
  <url type="website">https://bitbucket.org/leggedrobotics/any_common</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>message_logger</depend>

</package>
