<?xml version="1.0"?>

<package format="2">

  <name>any_worker</name>
  <version>0.5.2</version>
  <description>High resolution version of the ROS worker.</description>

  <license>BSD</license>

  <author email="pleemann@anybotics.com">Philipp Leemann</author>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <maintainer email="msuetterlin@anybotics.com">Marco Sütterlin</maintainer>
  <url>https://github.com/anybotics/any_node</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_logger</depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->
<!--   <build_depend>cmake_clang_tools</build_depend> -->
</package>
