<?xml version="1.0"?>
<package>
  <name>param_io</name>
  <version>0.0.1</version>
  <description>Parameter message conversions</description>

  <license>BSD</license>
  <url type="website">https://bitbucket.org/ethz-asl-lr/any_common</url>
  <maintainer email="diethelm@mavt.ethz.ch">Remo Diethelm</maintainer>
  <author email="diethelm@mavt.ethz.ch">Remo Diethelm</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
