<?xml version="1.0"?>

<package format="2">

  <name>param_io</name>
  <version>0.5.2</version>
  <description>Parameter message conversions</description>

  <license>BSD</license>

  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <url>https://github.com/anybotics/any_node</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>eigen</depend>

  <test_depend>rostest</test_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->
<!--   <build_depend>cmake_clang_tools</build_depend> -->
</package>
