<?xml version="1.0"?>

<package format="2">

  <name>signal_handler</name>
  <version>0.1.1</version>
  <description>Contains a static signal handling helper class.</description>
  
  <license>BSD</license>
  
  <author email="pleemann@ethz.ch">Philipp Leemann</author>
  <maintainer email="pleemann@ethz.ch">Philipp Leemann</maintainer>
  
  <url type="website">https://bitbucket.org/leggedrobotics/any_common</url>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
